arreglados petes de la gramatica y del prog

--- a/entrega3/informe/informe.tex
+++ b/entrega3/informe/informe.tex
@@ -356,7 +356,7 @@ Como siguiente paso en la adaptación de la gramática, se reemplazaron los termin
 
 <adding_operator> ::= <ADD_OP> | <MINUS_OP> | <OR_LOGOP>
 
-<relational_operator> ::= <LESS_OP> | <LESS_EQUAL_OP> | <GREATER_OP> | <GREATER_EQUAL_OP> | <EQUAL>
+<relational_operator> ::= <LESS_OP> | <LESS_EQUAL_OP> | <GREATER_OP> | <GREATER_EQUAL_OP> | <NOT_EQUAL_OP> | <EQUAL> 
 
 <procedure_statement> ::= <IDENTIFIER> <procedure_statement_rest>
 
@@ -505,7 +505,7 @@ Luego de esta serie de pasos, se llegó a la siguiente gramática:
 
 <adding_operator> ::= <ADD_OP> | <MINUS_OP> | <OR_LOGOP>
 
-<relational_operator> ::= <LESS_OP> | <LESS_EQUAL_OP> | <GREATER_OP> | <GREATER_EQUAL_OP> | <EQUAL>
+<relational_operator> ::= <LESS_OP> | <LESS_EQUAL_OP> | <GREATER_OP> | <GREATER_EQUAL_OP> | <NOT_EQUAL_OP> | <EQUAL>
 
 <procedure_statement> ::= <IDENTIFIER> <procedure_statement_rest>
 
