--- a/entrega3/informe/informe.tex
+++ b/entrega3/informe/informe.tex
@@ -46,7 +46,7 @@ Less\_Op						& {\ttfamily <\ }  \\ \hline %si se le sacan el backslash espacio 
 Greater\_Op					& {\ttfamily >\ } \\ \hline
 Greater\_Equal\_Op	& {\ttfamily >=} \\ \hline
 Less\_Equal\_Op			& {\ttfamily <=} \\ \hline
-Not\_Equal\_Op			& {\ttfamily <>} \\ \hline
+Not\_Equal\_Op			& {\ttfamily <>\ } \\ \hline
 Add\_Op		 					& {\ttfamily +}\\ \hline
 Minus\_Op 					& {\ttfamily -}\\ \hline
 Multiply\_Op				& {\ttfamily *}\\ \hline
