corregidas cosas del analizador sintactico

--- a/entrega3/informe/bateria.tex
+++ b/entrega3/informe/bateria.tex
@@ -5,7 +5,7 @@
 \usepackage[colorlinks=true,urlcolor=black,linkcolor=black]{hyperref}%
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
 
-\title{Compiladores e Intérpretes\\Manual de Desarrollo}
+\title{Compiladores e Intérpretes\\Batería de tests}
 
 \author{Diego Marcovecchio (LU: 83815)\and Leonardo Molas (LU: 82498)}
 
