--- a/entrega3/informe/informe.tex
+++ b/entrega3/informe/informe.tex
@@ -379,13 +379,11 @@ Como siguiente paso en la adaptación de la gramática, se reemplazaron los termin
 
 <formal_parameter_function_rest> ::= <SEMI_COLON> <formal_parameter_section> <formal_parameter_function_rest> | <CLOSE_PARENTHESIS> <TYPE_DECLARATION> <IDENTIFIER> <SEMI_COLON>
 
-<statement_part> ::= <BEGIN> <statement_part_rest>
+<statement_part> ::= <compound_statement>
 
-<statement_part_rest> ::= <statement> <statement_rest> | <statement_rest>
+<compound_statement> ::= <BEGIN> <statement> <compound_statement_rest> <END>
 
-<statement_rest> ::= <SEMI_COLON> <statement_rest_rest> | <END>
-
-<statement_rest_rest> ::= <statement> <statement_rest> | <statement_rest>
+<compound_statement_rest> ::= <SEMI_COLON> <statement> <compound_statement_rest> | <LAMBDA>
 
 <statement> ::= <simple_statement> | <structured_statement>
 
@@ -425,9 +423,7 @@ Como siguiente paso en la adaptación de la gramática, se reemplazaron los termin
 
 <procedure_statement_rest> ::= <OPEN_PARENTHESIS> <actual_parameter> <actual_parameter_rest> | <LAMBDA>
 
-<structured_statement> ::= <BEGIN> <structured_statement_other> | <conditional_statement> | <repetitive_statement>
-
-<structured_statement_other> ::= <statement> <statement_rest> | <statement_rest>
+<structured_statement> ::= <compound_statement> | <conditional_statement> | <repetitive_statement>
 
 <conditional_statement> ::= <IF> <expression> <THEN> <statement> <conditional_statement_rest>
 
@@ -439,7 +435,7 @@ Como siguiente paso en la adaptación de la gramática, se reemplazaron los termin
 \end{verbatim}
 
 \section{Gramática final}
-Para llegar a la gramática utilizada para implementar el analizador léxico, se realizaron varios pasos:
+Para llegar a la gramática utilizada para implementar el analizador sintáctico, se realizaron varios pasos:
 \begin{enumerate}
 	\item \textbf{Eliminar Ambiguedad}: ésta tal vez sea la afirmación más peligrosa, ya que no se puede saber si una gramática es ambigua o no. De cualquier manera, se eliminaron todas las ambiguedades que se encontraron, salvo el caso del \verb|if then else|, del cual se hablará más adelante.
 	\item \textbf{Eliminar Recursión a Izquierda}: Se utilizó el algoritmo explicado en \cite[pág. 212]{aho}.
@@ -528,17 +524,15 @@ Luego de esta serie de pasos, se llegó a la siguiente gramática:
 
 <formal_parameter_function_rest> ::= <SEMI_COLON> <formal_parameter_section> <formal_parameter_function_rest> | <CLOSE_PARENTHESIS> <TYPE_DECLARATION> <IDENTIFIER> <SEMI_COLON>
 
-<statement_part> ::= <BEGIN> <statement_part_rest>
+<statement_part> ::= <compound_statement>
 
-<statement_part_rest> ::= <statement> <statement_rest> | <statement_rest>
+<compound_statement> ::= <BEGIN> <statement> <statement_part_rest> <END>
 
-<statement_rest> ::= <SEMI_COLON> <statement_rest_rest> | <END>
-
-<statement_rest_rest> ::= <statement> <statement_rest> | <statement_rest>
+<statement_part_rest> ::= <SEMI_COLON> <statement> <statement_part_rest> | <LAMBDA>
 
 <statement> ::= <simple_statement> | <structured_statement>
 
-<simple_statement> ::= <IDENTIFIER> <simple_statement_rest>
+<simple_statement> ::= <IDENTIFIER> <simple_statement_rest> | <LAMBDA>
 
 <simple_statement_rest> ::= <ASSIGNMENT> <expression> | <OPEN_BRACKET> <expression> <CLOSE_BRACKET> <ASSIGNMENT> <expression> | <OPEN_PARENTHESIS> <actual_parameter> <actual_parameter_rest> | <LAMBDA>
 
@@ -574,9 +568,7 @@ Luego de esta serie de pasos, se llegó a la siguiente gramática:
 
 <procedure_statement_rest> ::= <OPEN_PARENTHESIS> <actual_parameter> <actual_parameter_rest> | <LAMBDA>
 
-<structured_statement> ::= <BEGIN> <structured_statement_other> | <conditional_statement> | <repetitive_statement>
-
-<structured_statement_other> ::= <statement> <statement_rest> | <statement_rest>
+<structured_statement> ::= <compound_statement> | <conditional_statement> | <repetitive_statement>
 
 <conditional_statement> ::= <IF> <expression> <THEN> <statement> <conditional_statement_other>
 
