--- a/entrega3/informe/informe.tex
+++ b/entrega3/informe/informe.tex
@@ -6,7 +6,7 @@
 %\usepackage{fancyvrb}
 \usepackage{float}
 \usepackage[colorlinks=true,urlcolor=black,linkcolor=black,citecolor=black]{hyperref}
-\usepackage{gmverb}
+%\usepackage{gmverb}
 
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
 
